syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.example.proto";
option java_outer_classname = "TransactionServiceProto";

package transactions;

message TransactionFilter {
  int64 accountId = 1;
  string fromDate = 2; // ISO-8601, ex: "2025-01-01"
  string toDate   = 3; // ISO-8601
  double minAmount = 4; // optionnel, 0 si non filtré
}

message Transaction {
  int64 id = 1;
  int64 accountId = 2;
  string timestamp = 3; // ISO-8601
  double amount = 4;
  string currency = 5;
  string label = 6;
}

service TransactionService {
  // 1 requête -> flux de réponses (server streaming)
  rpc StreamTransactions (TransactionFilter) returns (stream Transaction);
}